# newslingo

./: .gitignore  README.md  clusterissuer.yaml
collector/: .env.example  .pylintrc  Dockerfile  alembic.ini  celerybeat-schedule.bak  docker.sh  pytest.ini  requirements.txt  skaffold.yaml
collector/alembic/: env.py
collector/celery-app/: celery_config.py  scheduler.py
collector/celery_app/: celery_config.py  scheduler.py
collector/config/: logging_config.py
collector/helm/: Chart.yaml  values.yaml
collector/script/: script.sh
collector/test/: test_classify.py  test_collect_news.py  test_llm.py  test_mv_data.py
collector/yamls/: celery-scheduler-deployment.yaml  celery-worker-deployment.yaml  configmap.yaml  namespace.yaml  postgresql.yaml  redis-deployment.yaml  secret.yaml
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  middleware.ts  next-sitemap.config.js  next.config.js  nginx.conf  package-lock.json  package.json  skaffold.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: Comments.tsx  Header.tsx  NewsItemCard.tsx  header-auth.tsx  theme-switcher.tsx
frontend/constants/: categories.ts
server/: .env.example  .pylintrc  README copy.md  README.md  pyproject.toml  skaffold.yaml
server/dockerfiles/: Dockerfile
server/helm/: Chart.yaml  values.yaml
server/helm/templates/: deployment.yaml
server/src/: kube.cfg  local.cfg  run.py
server/src/health/: router.py
server/src/inference/: router.py  schemas.py  service.py
server/src/utils/: errors.py  utils.py
server/tests/: test_api.py
server/yamls/: sts.yaml
(+78 files in other folders)
