[tool.poetry]
name = "ai-inference-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
asyncer = "^0.0.5"
fasttext = {git = "https://github.com/cfculhane/fastText"}
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^24.2.0" }
pylint = "^3.1.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
exclude = [
    ".vscode",
    "imgs",
    "dockerfiles",
    "yamls",
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
